@@ -1,3 +1,8 @@
+2005-01-18  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/os/aix/os_defines.h (_XOPEN_SOURCE): Delete.
+	(_XOPEN_SOURCE_EXTENDED): Delete.
+
 2005-01-18  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* testsuite/testsuite_performance.h (time_counter::start):
